--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             <h2 class="page-title">Рекомендации для вас</h2>
             <div class="cards">
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Электросамокат</h3>
                         </a>
                         <button class="like">
@@ -89,11 +89,11 @@
                 </div>
                 <!-- /.card -->
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image_1.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Пвх материал 2й сорт</h3>
                         </a>
                         <button class="like">
@@ -108,11 +108,11 @@
                 </div>
                 <!-- /.card -->
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image_2.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Двухсторонняя ветровка для мальчика</h3>
                         </a>
                         <button class="like">
@@ -127,11 +127,11 @@
                 </div>
                 <!-- /.card -->
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image_3.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Пеленальная доска на комод</h3>
                         </a>
                         <button class="like">
@@ -146,11 +146,11 @@
                 </div>
                 <!-- /.card -->
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image_4.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Участок 8 сот. (ИЖС)</h3>
                         </a>
                         <button class="like">
@@ -165,11 +165,11 @@
                 </div>
                 <!-- /.card -->
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/card-image_5.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Ford Fusion, 2007</h3>
                         </a>
                         <button class="like">
