--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header container">
         <div class="navbar">
             <a href="/index.html" class="logo">
-                <img src="/img/logo.svg" alt="logo:Abito" class="logo-image">
+                <img src="img/logo.svg" alt="logo:Abito" class="logo-image">
             </a>
 
             <div class="navbar-panel">
