--- a/single.html
+++ b/single.html
@@ -17,7 +17,7 @@
     <header class="header container">
         <div class="navbar">
             <a href="/index.html" class="logo">
-                <img src="/img/logo.svg" alt="logo:Abito" class="logo-image">
+                <img src="img/logo.svg" alt="logo:Abito" class="logo-image">
             </a>
 
             <div class="navbar-panel">
@@ -93,38 +93,38 @@
                 class="swiper-container mySwiper2">
                     <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="/img/main.jpg" />
+                        <img src="img/main.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="/img/main2.jpg" />
+                        <img src="img/main2.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="/img/main3.jpg" />
+                        <img src="img/main3.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="/img/main4.jpg" />
+                        <img src="img/main4.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="/img/main5.jpg" />
+                        <img src="img/main5.jpg" />
                     </div>
                     </div>
               </div>
               <div thumbsSlider="" class="swiper-container mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="/img/main.jpg" />
+                        <img src="img/main.jpg" />
                       </div>
                       <div class="swiper-slide">
-                        <img src="/img/main2.jpg" />
+                        <img src="img/main2.jpg" />
                       </div>
                       <div class="swiper-slide">
-                        <img src="/img/main3.jpg" />
+                        <img src="img/main3.jpg" />
                       </div>
                       <div class="swiper-slide">
-                        <img src="/img/main4.jpg" />
+                        <img src="img/main4.jpg" />
                       </div>
                       <div class="swiper-slide">
-                        <img src="/img/main5.jpg" />
+                        <img src="img/main5.jpg" />
                       </div>
                 </div>
               </div>
@@ -206,7 +206,7 @@
                         </div>
                         <span class="author-status">Частное лицо</span> 
                     </div>
-                    <img src="/img/avatar.jpg" alt="" class="author-avatar">
+                    <img src="img/avatar.jpg" alt="" class="author-avatar">
                 </div>
                 <div class="button-group">
                     <button class="button button-block button-primary">Показать телефон</button>
@@ -217,10 +217,10 @@
         </main>
         <aside class="sidebar">
             <a href="#" class="">
-                <img src="/img/banner.jpg" alt="">
+                <img src="img/banner.jpg" alt="">
             </a>
             <a href="#" class="">
-                <img src="/img/banner1.jpg" alt="">
+                <img src="img/banner1.jpg" alt="">
             </a>
             <hr color="#E5E5E5">
             <footer class="footer">
