--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header container">
         <div class="navbar">
             <a href="/index.html" class="logo">
-                <img src="img/logo.svg" alt="logo:Abito" class="logo-image">
+                <img src="./img/logo.svg" alt="logo:Abito" class="logo-image">
             </a>
 
             <div class="navbar-panel">
@@ -94,7 +94,7 @@
                             <h3 class="card-title">Электросамокат</h3>
                         </a>
                         <button class="like">
-                            <img src="img/like.svg" alt="like">
+                            <img src="./img/like.svg" alt="like">
                         </button>
                     </div>
                     <strong class="card-price">
@@ -113,7 +113,7 @@
                             <h3 class="card-title">Пвх материал 2й сорт</h3>
                         </a>
                         <button class="like">
-                            <img src="img/like.svg" alt="like">
+                            <img src="./img/like.svg" alt="like">
                         </button>
                     </div>
                     <strong class="card-price">
@@ -132,7 +132,7 @@
                             <h3 class="card-title">Двухсторонняя ветровка для мальчика</h3>
                         </a>
                         <button class="like">
-                            <img src="img/like.svg" alt="like">
+                            <img src="./img/like.svg" alt="like">
                         </button>
                     </div>
                     <strong class="card-price">
@@ -151,7 +151,7 @@
                             <h3 class="card-title">Пеленальная доска на комод</h3>
                         </a>
                         <button class="like">
-                            <img src="img/like.svg" alt="like">
+                            <img src="./img/like.svg" alt="like">
                         </button>
                     </div>
                     <strong class="card-price">
@@ -170,7 +170,7 @@
                             <h3 class="card-title">Участок 8 сот. (ИЖС)</h3>
                         </a>
                         <button class="like">
-                            <img src="img/like.svg" alt="like">
+                            <img src="./img/like.svg" alt="like">
                         </button>
                     </div>
                     <strong class="card-price">
@@ -189,7 +189,7 @@
                             <h3 class="card-title">Ford Fusion, 2007</h3>
                         </a>
                         <button class="like">
-                            <img src="img/like.svg" alt="like">
+                            <img src="./img/like.svg" alt="like">
                         </button>
                     </div>
                     <strong class="card-price">
@@ -205,17 +205,17 @@
         <aside class="sidebar">
             <h4 class="page-title">Сервисы и услуги</h4>
             <div class="service">
-                <img src="img/shipping.svg" alt="icon:shipping" class="service-image">
+                <img src="./img/shipping.svg" alt="icon:shipping" class="service-image">
                 <h5 class="service-title">Доставка</h5>
                 <p class="service-text">Проверка при получении и возможность бесплатно вернуть товар</p>
             </div>
             <div class="service">
-                <img src="img/shipping_1.svg" alt="icon:shipping" class="service-image">
+                <img src="./img/shipping_1.svg" alt="icon:shipping" class="service-image">
                 <h5 class="service-title">Автотека</h5>
                 <p class="service-text">Отчёт с историей авто: пробег, владельцы, сведения о залоге, ДТП и ремонтах</p>
             </div>
             <div class="service">
-                <img src="img/shipping_2.svg" alt="icon:shipping" class="service-image">
+                <img src="./img/shipping_2.svg" alt="icon:shipping" class="service-image">
                 <h5 class="service-title">Онлайн-бронирование жилья</h5>
                 <p class="service-text">Посуточная аренда квартир и домов: большой выбор вариантов для поездок по России</p>
             </div>
