--- a/single.html
+++ b/single.html
@@ -220,7 +220,7 @@
                 <img src="./img/banner.jpg" alt="">
             </a>
             <a href="#" class="">
-                <img src="./img/banner1.jpg" alt="">
+                <img src="./img/banner_1.jpg" alt="">
             </a>
             <hr color="#E5E5E5">
             <footer class="footer">
