--- a/single.html
+++ b/single.html
@@ -217,10 +217,10 @@
         </main>
         <aside class="sidebar">
             <a href="#" class="">
-                <img src="./img/banner.jpg" alt="">
+                <img src="./img/banner.jpg" alt="banner">
             </a>
             <a href="#" class="">
-                <img src="./img/banner_1.jpg" alt="">
+                <img src="./img/banner_1.jpg" alt="banner">
             </a>
             <hr color="#E5E5E5">
             <footer class="footer">
